--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <html>
+  <meta http-equiv="refresh" content="0; URL='https://sambolinski.github.io/portfolio/#/about/'" />
   <p>TEST</P>
 </html>
